--- a/desafios/desafio10/style2.css
+++ b/desafios/desafio10/style2.css
@@ -98,13 +98,14 @@ nav {
     padding: 10px;
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.363);
     
+    
 }
 
 nav > a {
     color: var(--cor1);
     padding: 10px;
     text-decoration: none;
-    font-weight: bold;
+    font-weight: normal;
     border-radius: 5px;
     transition-duration: .5s;
 }
