--- a/desafios/desafio10/style2.css
+++ b/desafios/desafio10/style2.css
@@ -91,6 +91,7 @@ header>p {
     padding-left: 10px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.322);
     margin-bottom: 0px;
+    padding-bottom: 10px;
 }
 
 nav {
